# tendo

./: .gitignore  .pep8  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yamllint  CHANGELOG.md  CHANGES.txt  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  clean.sh  index.html  mkdocs.yml  prepare  pyproject.toml  pytest.ini  quicktest  readthedocs.yml  release  release-test.sh  release.sh  requirements-dev.txt  requirements-opt.txt  requirements.txt  setup.cfg  setup.py  test  test-distribute.sh  test.sh  tox.ini
.config/: constraints.txt  requirements-docs.in  requirements-test.in
.github/: dependabot.yml  labels.yml
.github/workflows/: ack.yml  lint.yml  release-drafter.yml  release.yml  tests.yml  tox.yml
demo/: demo_colorer.py
docs/: Makefile  conf.py  index.rst  make.bat  make.py
src/tendo/: __init__.py  ansiterm.py  colorer.py  execfile2.py  singleton.py  tee.py  unicode.py
src/tendo/tests/: test_colorer.py  test_execfile2.py  test_singleton.py  test_tee.py  test_unicode.py
src/tendo/tests/assets/: sample_utf8_bom.txt
tendo/: __init__.py  ansiterm.py  colorer.py  execfile2.py  singleton.py  tee.py  test-unicode.py  test.py  unicode.py  version.py
tendo/tests/: full_sample_utf8_bom.txt  sample_ucs2_be.txt  sample_ucs2_le.txt  sample_utf8.txt  test_colorer.py  test_execfile2.py  test_singleton.py  test_tee.py  test_unicode.py  utf8-after-append.txt
