[build-system]
requires = [
  "setuptools >= 65.4.0", # required by pyproject+setuptools_scm integration
  "setuptools_scm[toml] >= 3.5.0", # required for "no-local-version" scheme
  "setuptools_scm_git_archive >= 1.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py38"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 100
skip_covered = true
show_missing = true

[tool.coverage.run]
source = ["src"]
# Do not use branch until bug is fixes:
# https://github.com/nedbat/coveragepy/issues/605
branch = false
parallel = true
concurrency = ["multiprocessing", "thread"]

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/tendo/_version.py"
