[metadata]
description-file = README

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[pytest]
norecursedirs = . .svn _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --ignore=setup.py --tb=long --capture=fd -rxX  --maxfail=10 --pep8 tendo
# --maxfail=2 -n4
# -n4              runs up to 4 parallel procs
# --maxfail=2      fail fast, dude
# --durations=3    report the top 3 longest tests

# these are important for distributed testing, to speedup their execution we minimize what we sync
rsyncdirs = . tendo demo docs
rsyncignore = .hg .git
pep8ignore = E501 E265 E127 E901 E128 E402

[flake8]
exclude = migrations,__pycache__,build,bmll/config.py,env,src,.tox
# the only additional ignores are the docstrings ones Dxx, the other.
# ones are the default ones.
# see http://pep8.readthedocs.io/en/latest/intro.html
ignore = E121,E123,E126,E133,E226,E241,E242,E704,W503,D100,D101,D102,D103,D104,D105,D200,D202,D203,D204,D205,D207,D210,D211,D300,D301,D400,D401
max-line-length=1024

[pep8]
exclude=build,lib,.tox,third,*.egg,docs,packages
;filename=
;select
ignore=E501,E265,E402
max-line-length=1024
count=1
;format
;quiet
;show-pep8
;show-source
statistics=1
;verbose=1

;PEP8_OPTS="--filename=*.py  --exclude=lib --ignore=E501 scripts"
;pep8 $PEP8_OPTS --show-source --repeat
;pep8 --statistics -qq $PEP8_OPTS
