[metadata]
name = tendo

author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer-email = sorin.sbarnea@gmail.com
summary = A Python library that extends some core functionality
description-file = README.rst
home-page = https://github.com/pycontribs/tendo
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP

keywords =
    tendo
    tee
    unicode
    colorer
    singleton

[options]
python_requires = >=3.6

[files]
packages =
    tendo

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
enable-extensions = H106,H203,H204,H205,H210,H904
exclude = __pycache__,build,src,.tox
ignore = D
max-line-length=1024

[tool:pytest]
norecursedirs = . .svn _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --ignore=setup.py --tb=long --capture=fd -rxX  --maxfail=10 tendo
# --maxfail=2 -n4
# -n4              runs up to 4 parallel procs
# --maxfail=2      fail fast, dude
# --durations=3    report the top 3 longest tests

# these are important for distributed testing, to speedup their execution we minimize what we sync
rsyncdirs = . tendo demo docs
rsyncignore = .hg .git
filterwarnings =
    default
    ignore:.*mode is deprecated:Warning
    ignore:unclosed file.*:Warning
    ignore:can't resolve package from.*:Warning
