[metadata]
name = tendo

author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
summary = A Python library that extends some core functionality
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/pycontribs/tendo
license_files = LICENSE.txt
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP

keywords =
    tendo
    tee
    unicode
    colorer
    singleton


[options]
use_scm_version = True
python_requires = >=3.8
package_dir =
  = src
packages = find:
# Do not use include_package_data as we mention them explicitly.
# see https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# include_package_data = True
zip_safe = False
install_requires =
    six

[options.extras_require]
test =
    coverage[toml]>=6.5.0
    coveralls~=3.3.1
    pre-commit>=3.3.3
    pip
    pytest-cache~=1.0
    pytest-cov~=3.0.0
    pytest-html~=3.1.1
    pytest-instafail~=0.4.2
    pytest-xdist~=2.5.0
    pytest~=7.1.3
    wheel~=0.37.1
docs =
    Sphinx~=5.2.1
    docutils~=0.19
    MarkupSafe~=2.1.1

[options.package_data]
* =
  py.typed
  **/*.txt

[options.packages.find]
where = src

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
enable-extensions = H106,H203,H204,H205,H210,H904
exclude = __pycache__,build,src,.tox
ignore =
    D
    W503 # black conflict
max-line-length=1024
